increased mobile div min height and believe to have fixed non-wrapping issue for gameplay

--- a/src/index.css
+++ b/src/index.css
@@ -42,14 +42,14 @@ span {
   flex-direction: column;
   align-items: center;
   width: 75%;
-  /* border: solid red; */
+  border: solid black;
 }
 
 .FakeGameContainer {
   
   align-items: center;
   width: 75%;
-  border: solid red;
+  border: solid black;
   /* margin: 0 0 1rem; */
   height: 30rem;
 }
@@ -58,17 +58,13 @@ span {
   margin: 5.5rem;
 }
 
-.GameContainer, .FakeGameContainer {
-  border: solid black;
-}
-
 .InPublicContainer {
-  height: 15rem;
+  min-height: 15rem;
   /* border: solid red; */
 }
 
 .QuarantinedContainer {
-  height: 15rem;
+  min-height: 15rem;
   /* border: solid red; */
 }
 
@@ -220,6 +216,16 @@ button {
   /* span { 
     display: inline-block;
   } */
+
+  .InPublicContainer {
+  min-height: 30rem;
+  /* border: solid red; */
+  }
+
+  .QuarantinedContainer {
+  min-height: 30rem;
+  /* border: solid red; */
+  }
 
   .SuperherosContainer {
     padding: 1rem 1rem;
